Add random color generator Add canvas creator Add mouseover event

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
+    <button>Change the size</button>
     <div id="gridCont"></div>
 
     <script src="script.js"></script>
